bytemark-client (3.1) UNRELEASED; urgency=low

  ### Admin changes:
  * `approve server`, `reject server`, `reify disc`, `reap servers` commands
    have all been removed

  ### Fixes:
  * Authentication with a token as a user other than $USER (or the value in
    your config-dir) no longer fails with a messages about being an unexpected
    user.

 -- telyn <telyn@bytemark.co.uk>  Tue, 08 May 2018 10:22:23 +0100

bytemark-client (3.0) UNRELEASED; urgency=low

  ### New Features:
  * `assent` command has been added to mark an account as having assented to
    new terms of business.
  * `restart server` (previously `restart`) and `start server` (previously
    `start`) can now start a server up in the rescue netboot appliance with
    the `--netboot` flag, or into any appliance with the `--appliance <name>`
    flag.

  ### New Admin Features:
  * impersonation support using `--impersonate` global flag. (see `bytemark
    help`)
  * `create migration` command for creating a MigrationJob. See
    the help for this command - it's really very good.
  * `show migrations` command for inspecting MigrationJobs
  * `show migration` command for inspecting a single MigrationJob
  * `update migration` command for altering MigrationJob-style migrations
  * `set iops limit` command for limiting a disc or server's IOPS
  * `update billing-definition` command
  * `show disc by id` command

  ### Changes:
  * Numerous commands have been renamed / altered:
    - `config` renamed to `show config`
    - `config set` & `config unset` have been merged into `update config` (see
      `help update config`)
    - `create backup` renamed to `backup discs`
    - `create discs` renamed to `add discs`
    - `create group` renamed to `add group`
    - `create server` renamed to `add server`
    - `grant` and `revoke` renamed to `grant privilege` and `revoke privilege`
    - `list accounts` renamed to `show accounts`
    - `list backups` renamed to `show backups`