@@ -229,16 +229,6 @@ func (c *bytemarkClient) MigrateVirtualMachine(vmName VirtualMachineName, newHea
 	return
 }
 
-func (c *bytemarkClient) ReapVMs() (err error) {
-	r, err := c.BuildRequest("POST", BrainEndpoint, "/admin/reap_vms")
-	if err != nil {
-		return
-	}
-
-	_, _, err = r.Run(nil, nil)
-	return
-}
-
 func (c *bytemarkClient) DeleteVLAN(id int) (err error) {
 	r, err := c.BuildRequest("DELETE", BrainEndpoint, "/admin/vlans/%s", strconv.Itoa(id))
 	if err != nil {
@@ -325,55 +315,6 @@ func (c *bytemarkClient) EmptyHead(idOrLabel string) (err error) {
 	}
 
 	_, _, err = r.Run(nil, nil)
-	return
-}
-
-func (c *bytemarkClient) ReifyDisc(id int) (err error) {
-	r, err := c.BuildRequest("POST", BrainEndpoint, "/admin/discs/%s/reify", strconv.Itoa(id))
-	if err != nil {
-		return
-	}
-
-	_, _, err = r.Run(nil, nil)
-	return
-}
-
-func (c *bytemarkClient) ApproveVM(name VirtualMachineName, powerOn bool) (err error) {
-	vm, err := c.GetVirtualMachine(name)
-	if err != nil {
-		return err
-	}
-
-	r, err := c.BuildRequest("POST", BrainEndpoint, "/admin/vms/%s/approve", strconv.Itoa(vm.ID))
-	if err != nil {
-		return
-	}
-
-	obj := map[string]bool{}
-	if powerOn {
-		obj["power_on"] = powerOn
-	}
-
-	_, _, err = r.MarshalAndRun(obj, nil)
-	return
-}
-
-func (c *bytemarkClient) RejectVM(name VirtualMachineName, reason string) (err error) {
-	vm, err := c.GetVirtualMachine(name)
-	if err != nil {
-		return err
-	}
-
-	r, err := c.BuildRequest("POST", BrainEndpoint, "/admin/vms/%s/reject", strconv.Itoa(vm.ID))
-	if err != nil {
-		return
-	}
-
-	obj := map[string]string{
-		"reason": reason,
-	}
-
-	_, _, err = r.MarshalAndRun(obj, nil)
 	return
 }
 
