@@ -238,7 +238,6 @@ type Client interface {
 	GetRecentVMs() (brain.VirtualMachines, error)
 	MigrateDisc(disc int, newStoragePool string) error
 	MigrateVirtualMachine(vmName VirtualMachineName, newHead string) error
-	ReapVMs() error
 	DeleteVLAN(id int) error
 	AdminCreateGroup(name GroupName, vlanNum int) error
 	CreateIPRange(ipRange string, vlanNum int) error
@@ -246,9 +245,6 @@ type Client interface {
 	CancelVMMigration(id int) error
 	EmptyStoragePool(idOrLabel string) error
 	EmptyHead(idOrLabel string) error
-	ReifyDisc(id int) error
-	ApproveVM(name VirtualMachineName, powerOn bool) error
-	RejectVM(name VirtualMachineName, reason string) error
 	RegradeDisc(disc int, newGrade string) error
 	UpdateVMMigration(name VirtualMachineName, speed *int64, downtime *int) error
 	CreateUser(username string, privilege string) error
