@@ -18,7 +18,6 @@ func TestQualityInterfaceHasntGrown(t *testing.T) {
 		"AddIP",
 		"AdminCreateGroup",
 		"AllowInsecureRequests",
-		"ApproveVM",
 		"AuthWithCredentials",
 		"AuthWithToken",
 		"BuildRequest",
@@ -83,12 +82,9 @@ func TestQualityInterfaceHasntGrown(t *testing.T) {
 		"MigrateVirtualMachine",
 		"MoveVirtualMachine",
 		"ReadDefinitions",
-		"ReapVMs",
 		"RegisterNewAccount",
 		"RegradeDisc",
-		"ReifyDisc",
 		"ReimageVirtualMachine",
-		"RejectVM",
 		"ResetVirtualMachine",
 		"ResizeDisc",
 		"RestartVirtualMachine",
