@@ -3,6 +3,8 @@ bytemark-client (3.1) UNRELEASED; urgency=low
   ### Admin changes:
   * `approve server`, `reject server`, `reify disc`, `reap servers` commands
     have all been removed
+  * ApproveVMs, RejectVMs, ReifyDisc, ReapVMs methods have all been removed
+    from Client interface and bytemarkClient struct.
 
   ### Fixes:
   * Authentication with a token as a user other than $USER (or the value in
